<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".Measure.MeasureFragment"
                                             android:background="@color/colorPrimaryBg">

    <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:id="@+id/ivLoading"
            app:srcCompat="@drawable/img_measure_result"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:clickable="true"
            app:layout_constraintTop_toBottomOf="@+id/tvResultDate"/>
    <TextView
            android:text="@string/str_measure_result_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvWarning"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvResultHB" android:textSize="12sp"
            app:layout_constraintHorizontal_bias="0.504"/>
    <TextView
            android:text="2018/10/31"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/tvResultDate"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp" android:layout_marginTop="26dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <TextView
            android:text="80 bpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvResultHB"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/ivLoading"/>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            app:srcCompat="@color/colorSeparateLine"
            android:id="@+id/ivSeparate" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tvWarning" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/str_measure_result_ex_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvExInfo"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/ivSeparate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:textSize="12sp"
            android:lineSpacingExtra="5sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@android:color/white"/>
    <Button
            android:text="@string/str_measure_save_result"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:id="@+id/btSaveResult" android:layout_marginTop="10dp"
            android:includeFontPadding="false"
            app:layout_constraintTop_toBottomOf="@+id/tvExInfo" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="18dp" android:textSize="12sp" android:background="@drawable/img_bt_save"/>

</android.support.constraint.ConstraintLayout>