<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cl_main_layout"
        android:background="@color/colorUVNormal">
    <android.support.v7.widget.Toolbar
            android:id="@+id/tb_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <Button
                    android:id="@+id/bt_toolbar_back"
                    android:layout_width="9dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/common_backspace_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:id="@+id/tv_toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_main_title"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

    <TextView
            android:id="@+id/tv_uv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="62dp"
            android:layout_marginTop="94dp"
            android:layout_marginEnd="62dp"
            android:gravity="center"
            android:text="@string/str_uv_current_uv"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tb_toolbar" />

    <ImageView
            android:id="@+id/iv_uv_round_bg"
            android:layout_width="176dp"
            android:layout_height="176dp"
            android:layout_marginStart="92dp"
            android:layout_marginTop="53dp"
            android:layout_marginEnd="92dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_uv_title"
            app:srcCompat="@drawable/img_loading" />

    <TextView
            android:id="@+id/tv_uv_factor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:includeFontPadding="false"
            android:text="0"
            android:textSize="70sp"
            app:layout_constraintEnd_toEndOf="@id/iv_uv_round_bg"
            app:layout_constraintStart_toStartOf="@id/iv_uv_round_bg"
            app:layout_constraintTop_toTopOf="@+id/iv_uv_round_bg" />

    <TextView
            android:id="@+id/tv_uv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/str_uv_normal"
            android:textSize="36sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_uv_factor"
            app:layout_constraintEnd_toEndOf="@id/iv_uv_round_bg"
            app:layout_constraintStart_toStartOf="@id/iv_uv_round_bg" />

    <ImageView
            android:id="@+id/iv_uv_high"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_marginTop="71dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_uv_round_bg"
            app:srcCompat="@drawable/uvsensing_yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
            android:id="@+id/iv_uv_normal"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toStartOf="@+id/iv_uv_high"
            app:layout_constraintTop_toTopOf="@id/iv_uv_high"
            app:srcCompat="@drawable/uvsensing_green" />

    <ImageView
            android:id="@+id/iv_uv_low"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toStartOf="@+id/iv_uv_normal"
            app:layout_constraintTop_toTopOf="@id/iv_uv_high"
            app:srcCompat="@drawable/uvsensing_skyblue" />

    <ImageView
            android:id="@+id/iv_uv_very_high"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/iv_uv_high"
            app:layout_constraintTop_toTopOf="@id/iv_uv_high"
            app:srcCompat="@drawable/uvsensing_orange" />

    <ImageView
            android:id="@+id/iv_uv_dangerous"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/iv_uv_very_high"
            app:layout_constraintTop_toTopOf="@id/iv_uv_high"
            app:srcCompat="@drawable/uvsensing_red" />

</android.support.constraint.ConstraintLayout>