<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="2018/11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDay" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="4dp" android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textAlignment="center" android:gravity="center_horizontal"
            app:layout_constraintStart_toEndOf="@+id/btYesterday" android:layout_marginStart="30dp"
            app:layout_constraintEnd_toStartOf="@+id/btTomorrow" android:layout_marginEnd="30dp"/>
    <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/btYesterday" app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            android:layout_marginTop="4dp" android:background="@drawable/ic_chevron_left_black_24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="73dp"/>
    <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/btTomorrow" app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            android:layout_marginTop="4dp"
            android:background="@drawable/ic_chevron_right_black_24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="73dp"/>
    <com.anychart.AnyChartView
            android:id="@+id/acChartMonth"
            android:layout_width="300dp"
            android:layout_height="180dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvDay"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
    />
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp" app:srcCompat="@color/colorSeparateLine"
            android:id="@+id/ivSeparate" android:layout_marginTop="22dp"
            app:layout_constraintTop_toBottomOf="@+id/acChartMonth" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/str_statistic_month_avr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvMonthlyAvr" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/ivSeparate"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="45dp"/>
    <TextView
            android:text="@string/str_statistic_minimum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvAfternoonAvr" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/ivSeparate"
            app:layout_constraintStart_toEndOf="@+id/tvMonthlyAvr" android:layout_marginStart="65dp"
            app:layout_constraintEnd_toStartOf="@+id/tvDayAvr" android:layout_marginEnd="65dp"/>
    <TextView
            android:text="@string/str_statistic_maximum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDayAvr" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/ivSeparate"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="52dp"/>
    <ImageView
            android:layout_width="88dp"
            android:layout_height="88dp" app:srcCompat="@drawable/img_loading"
            android:id="@+id/ivMinimumAvr" android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/tvAfternoonAvr" android:layout_marginStart="30dp"
            app:layout_constraintStart_toEndOf="@+id/ivMonthlyAvr"
            app:layout_constraintEnd_toStartOf="@+id/ivMaximumAvr"
            android:layout_marginEnd="30dp"/>
    <ImageView
            android:layout_width="88dp"
            android:layout_height="88dp" app:srcCompat="@drawable/img_loading"
            android:id="@+id/ivMonthlyAvr"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
            android:layout_marginTop="14dp" app:layout_constraintTop_toBottomOf="@+id/tvMonthlyAvr"
    />
    <ImageView
            android:layout_width="88dp"
            android:layout_height="88dp" app:srcCompat="@drawable/img_loading"
            android:id="@+id/ivMaximumAvr" android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/tvDayAvr"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvMonthlyBPM" app:layout_constraintStart_toStartOf="@+id/ivMonthlyAvr"
            app:layout_constraintEnd_toEndOf="@+id/ivMonthlyAvr" app:layout_constraintTop_toTopOf="@+id/ivMonthlyAvr"
            app:layout_constraintBottom_toBottomOf="@+id/ivMonthlyAvr"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvMinimumBPM" app:layout_constraintStart_toStartOf="@+id/ivMinimumAvr"
            app:layout_constraintEnd_toEndOf="@+id/ivMinimumAvr" app:layout_constraintTop_toTopOf="@+id/ivMinimumAvr"
            app:layout_constraintBottom_toBottomOf="@+id/ivMinimumAvr"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvMaximumBPM" app:layout_constraintStart_toStartOf="@+id/ivMaximumAvr"
            app:layout_constraintEnd_toEndOf="@+id/ivMaximumAvr" app:layout_constraintTop_toTopOf="@+id/ivMaximumAvr"
            app:layout_constraintBottom_toBottomOf="@+id/ivMaximumAvr"/>
</android.support.constraint.ConstraintLayout>